Version 0.5.2 - 201507
* Use double quotes for HTML code since single quotes break on some forums.
* Fixed Markdown - URL with name.

Version 0.5.1 - 20150518
* Refactored code to make the add-on compatible with e10s.
* Settings: Added import/export functionality.
* Settings: Added command to reorder custom tags alphabetically.
* Commands: "Make image from selection" to Markdown menu.
* Updated locales code dropping region codes where unnecessary (e.g. 'pl-PL' -> 'pl').

Version 0.4.1 - 20140930
* Fixed problem with SeaMonkey (Ci undefined, add-on was not working)

Version 0.4.0 - 20140705
* Added MarkDown basic support, especially useful for Github.
* New icons. Source: https://github.com/iconic/open-iconic
* Now add-on works with content editable HTML5 elements. Issue reported by rnicoletto ("theBox.value is null") with Disqus comments.
* Fixed linter errors in bbcodextra.js, removed unnecessary whitespaces in files, heavily simplified code.
* Added script to check locales based on compare-dirs and repack the add-on.
* Published code on Github: https://github.com/flodolo/bbcodextra

Version 0.3.2 - 20100601
* Fixed "Color" command (broken in 0.3.1)
* Renamed variable "prefs" to "bbcodextraPrefs" to avoid conflicts with extensions that declare public variables with that name
* Added back Hebrew locale

Version 0.3.1 - 20100506
* Removed global variables, moved all JavaScript code inside bbcodextra.js and inside "bbcodextra" namespace (as suggested during AMO's review on 0.3.0)

Version 0.3.0 - 20100428
* New functionality: Custom Tags (see http://www.yetanothertechblog.com/bbcodextra/)
* Using wrapper chrome://global/content/nsUserSettings.js for preferences management
* General reorganization: moved code into specific .js files (bbcodextraPrefs.js, bbcodextraCustomTag.js), moved all images from content to skin
* Added "quit" function on the unload and moved to nsPreferences (chrome://global/content/nsUserSettings.js)