@@ -23,6 +23,7 @@
 <!ENTITY bbcodextra.list "リスト">
 <!ENTITY bbcodextra.listord "リスト(番号付き)">
 <!ENTITY bbcodextra.listalf "リスト(アルファベット付き)">
+<!ENTITY bbcodextra.spoiler "Spoiler">
 <!ENTITY bbcodextra.img "画像">
 <!ENTITY bbcodextra.imgselection "Make image from selection">
 <!ENTITY bbcodextra.urlselection "選択した部分のリンクの作成">
