@@ -23,6 +23,7 @@
 <!ENTITY bbcodextra.list "項目清單">
 <!ENTITY bbcodextra.listord "編號清單 (數字)">
 <!ENTITY bbcodextra.listalf "編號清單 (字母)">
+<!ENTITY bbcodextra.spoiler "Spoiler">
 <!ENTITY bbcodextra.img "圖片">
 <!ENTITY bbcodextra.imgselection "Make image from selection">
 <!ENTITY bbcodextra.urlselection "鏈結 (插入為選取區的網址)">
